# pde-solver

./: .gitignore  CMakeLists.txt  README.md  config.ins  main.cpp  pde-solver.cpp  pde-solver.h  performance.md
scenarios/: config_sce_1.ins  config_sce_2.ins  config_sce_3.ins
src/: CMakeLists.txt  io.cpp  io.h  main.cpp  pde-solver.cpp  pde-solver.h  pde_solver.cpp  pde_solver.h  pde_solver_cartesian.cpp  pde_solver_cartesian.h  pde_solver_polar.cpp  pde_solver_polar.h
tests/: CMakeLists.txt  test.cpp  test_S1.cpp  test_S2.cpp  tests.cpp
